Folded in Efrat's changes:   I made these change to allow remote execution of a workflow from within   a web service.
  The first modification was due to a URI authentication exception when
  trying to create a file object from a URI on the remote side. The second
  modification was due to the file protocol requirements to use 3 slashes,
  'file:///' on the remote side, although it would be probably be a good
  idea to also make sure first that the url string actually represents the
  file protocol.